fixed header alingnment

--- a/index.html
+++ b/index.html
@@ -9,14 +9,43 @@
     <!-- Home / Navigation bar -->
     <header>
 
-        <h1><a href="/">Abdalla Hamdy</a></h1>
+        <div class="profile-pic">
+            <img src="./assets/images/profile-picture.jpeg" alt="A profile picture of Abdalla Hamdy" />
+        </div>
+
+        <div class="header-content">
+            <h1>Abdalla Hamdy</h1>
+
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#my-projects">My Projects</a>
+                    </li>
+                    <li>
+                        <a href="#contact-me">Contact Me</a>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>
+        
+
 
     </header>
 
     <!-- About Me Section -->
     <section class="about-me">
+        <div class="section-title">
+            <h1></h1>
+        </div>
 
-        <div></div>
+    </section>
+
+    <!-- Projects Section -->
+    <section class="my-projects">
 
     </section>
 
