--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
 
+    <body>
     <!-- Home / Navigation bar -->
     <header>
 
@@ -39,15 +40,22 @@
     <!-- About Me Section -->
     <section class="about-me">
         <div class="section-title">
-            <h1></h1>
+            <h2>About Me</h1>
+        </div>
+        <div class="section-paragraph">
+            <p>Knowledgeable and highly motivated Computer Science graduate with over 3 years of experience in supporting and maintaining network security systems. Currently enrolled in the Carleton University Coding Bootcamp to expand my full-stack web development skills.</p>
         </div>
 
     </section>
 
     <!-- Projects Section -->
-    <section class="my-projects">
-
+    <section class="my-projects"> 
+        <div class="section-title">
+            <h2>My Projects</h2>
+        </div>
+        <div class="section-paragraph">
+            <p>Placeholder</p>
+        </div>
     </section>
-
-
+</body>
 </html>
