added all sections

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <!-- About Me Section -->
-    <section class="about-me">
+    <section id="about-me">
         <div class="section-title">
             <h2>About Me</h1>
         </div>
@@ -49,7 +49,7 @@
     </section>
 
     <!-- Projects Section -->
-    <section class="my-projects"> 
+    <section id="my-projects"> 
         <div class="section-title">
             <h2>My Projects</h2>
         </div>
@@ -57,5 +57,15 @@
             <p>Placeholder</p>
         </div>
     </section>
+
+    <section id="contact-me">
+        <div class="section-title">
+            <h2>Contact Me</h2>
+        </div>
+        <div class="section-paragraph">
+            <p>placeholder</p>
+        </div>
+    </section>
+
 </body>
 </html>
