--- a/index.html
+++ b/index.html
@@ -53,9 +53,20 @@
         <div class="section-title">
             <h2>My Projects</h2>
         </div>
-        <div class="section-paragraph">
-            <p>Placeholder</p>
+        <div id="projects-icons">
+            <a href="#">
+                <img src="./assets/images/run-buddy-icon.png" alt="" />
+                <p>placeholder</p>
+            </a>
+            <a href="#">
+                <img src="./assets/images/portfolio-icon.png" alt="" />
+                <p>placeholder</p>
+            </a>
         </div>
+        <div class="projects-captions">
+
+        </div>
+        
     </section>
 
     <section id="contact-me">
