fixed up the projects section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="projects-icons">
             <a href="#">
                 <img src="./assets/images/run-buddy-icon.png" alt="" />
-                <p>placeholder</p>
+                <p>Run Buddy website</p>
             </a>
             <a href="#">
                 <img src="./assets/images/portfolio-icon.png" alt="" />
