adde the contact me section / added enhancements

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
 
     <!-- Projects Section -->
     <section id="my-projects"> 
-        <div class="section-title">
+        <div class="section-title" id="project-title">
             <h2>My Projects</h2>
         </div>
         <div id="projects-icons">
-            <a href="#">
-                <img src="./assets/images/run-buddy-icon.png" alt="" />
-                <p>Run Buddy website</p>
+            <a href="https://abdallahamdy.github.io/run-buddy/" target="_blank">
+                <img src="./assets/images/run-buddy-icon.png" alt="Screenshot of the run buddy application" />
+                <p>Run Buddy Website</p>
             </a>
-            <a href="#">
-                <img src="./assets/images/portfolio-icon.png" alt="" />
-                <p>placeholder</p>
+            <a href="https://abdallahamdy.github.io/abdalla-portfolio" target="_blank">
+                <img src="./assets/images/portfolio-icon.png" alt="Screenshot of the porftolio application" />
+                <p>Portfolio Website</p>
             </a>
         </div>
         <div class="projects-captions">
@@ -74,7 +74,9 @@
             <h2>Contact Me</h2>
         </div>
         <div class="section-paragraph">
-            <p>placeholder</p>
+            <p>Name: Abdalla Hamdy</p>
+            <p>Email: <a href="mailto:abdulla.mh@hotmail.com">abdulla.mh@hotmail.com</a></p>
+            <p>Telephone: <a href="tel:123-456-7890">123-456-7890</a></p>
         </div>
     </section>
 
