added visual enhancements

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Abdalla's Portfolio</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     </head>
 
     <body>
@@ -30,7 +31,6 @@
                     </li>
                 </ul>
             </nav>
-
         </div>
         
 
